--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
 name: rhods-model
-title: Creating Machine Learning Models with Red Hat OpenShift Data Science
+title: Creating Machine Learning Models with Red Hat OpenShift AI
 version: 1.33
 nav:
 - modules/ROOT/nav.adoc
